06-example/3-ingress.yaml
---
# Supported annotations
# https://github.com/kubernetes-sigs/aws-load-balancer-controller/blob/release-2.14/docs/guide/service/annotations.md#nlb-target-type
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp
  namespace: 6-example
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /health
spec:
  ingressClassName: alb
  rules:
    - host: k8s.santhoshkumar.click
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: myapp
                port:
                  number: 8080
